- Add gradients.
- Hide menu when not needed.
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.20
- Undo/Redo buttons now uses OnClick event instead of the MessageQueue.
- SubMenuItems now can be disabled. (Appears in grey and remains grey when the
  mouse points it.)
- File/Quit works, but it quits instantly without asking anything.

2023.03.19
- Fix: When right clicked on drawarea to cancel color picking, ToggleControls
  also occured.
- Fix: When right clicked to cancel any tool, ToggleControls also occured.
- ToggleControls now toggles MainMenu too, to let the user see the whole window.
- Closing the window with red X now shuts down app correctly.

2023.03.18
- Fix: You couldn't right click the key color to pick another color in color selector.
- Fix: When the same color appears more than once in the color selector, right
  clicking any of it caused all of them to appear as color picking target.

2023.03.17
- Color sliders moved just above the palette block in PaletteEditor.
- Fixed mouse wheel events.

2023.03.16
- MediaManager is reduced to GFXManager to remove the dependency on BASS.DLL.
  Should switch Bass to SDL2 but that's out of this project's scope.
- BuildRelease.bat added. It builds release executables (both x86 and x64) and data file
  into ..\_release.
- SDL2 dll names are changed to allow both dlls to be in the same folder.
  Source modified to pick the correct dll.

2023.03.15
- Sliders are visible again.
- BUG: Sliders don't receive MouseWheel event.
- Added and wired Alpha slider.
- Changed target architecture to x64.
- Changed SDL2 libraries to SDL2-for-Pascal (more up to date).

2023.03.14
- Color selector visible and works again.
- Still working under the hood.

2023.03.11
- Big rework under the hood regarding mouse events and visual components,
  so a few things are broken now:
  - Color selector is not visible.
  - Sliders are not visible. (If somehow you can invoke palette editor.)

2023.03.10