@@ -219,6 +219,8 @@ begin
   atm.AddItem('ROTATE',msg,false);
   atm.AddItem('FLIP V',msg,false);
   atm.AddItem('FLIP H',msg,false);
+  atm.AddItem('MAGNIFY 2X',msg,false);
+  atm.AddItem('MAGNIFY 3X',msg,false);
   atm.AddItem('LOAD',TMessage.Init(MSG_LOADCEL,0));
   atm.AddItem('SAVE',msg,false);
   atm.AddItem('EXPORT',msg,false);
