@@ -21,8 +21,8 @@ GetColor=58
 
 [DrawArea]
 Zoom=3
-ZoomLeft=-21
-ZoomTop=-8
+ZoomLeft=-23
+ZoomTop=-27
 
 [BasicControls]
 Tool0=DRAW
@@ -57,5 +57,5 @@ Selected4=4
 Selected5=5
 Selected6=105
 Selected7=7
-ActiveColor=106
+ActiveColor=2
 
