@@ -15,19 +15,18 @@
       <Unit>
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="190"/>
-        <CursorPos X="17" Y="209"/>
+        <TopLine Value="151"/>
+        <CursorPos X="30" Y="163"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="238"/>
-        <CursorPos Y="85"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="232"/>
+        <CursorPos X="42" Y="238"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -52,9 +51,8 @@
         <Filename Value="BDPControlsUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="236"/>
-        <CursorPos X="19" Y="284"/>
-        <FoldState Value=" T3kF049 pidjK0822111 PJiH0y"/>
+        <TopLine Value="132"/>
+        <CursorPos Y="196"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -79,10 +77,10 @@
       <Unit>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
-        <TopLine Value="142"/>
-        <CursorPos Y="157"/>
-        <UsageCount Value="196"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="73"/>
+        <CursorPos X="63" Y="99"/>
+        <UsageCount Value="197"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -91,7 +89,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="127"/>
         <CursorPos X="3" Y="149"/>
-        <UsageCount Value="194"/>
+        <UsageCount Value="195"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -99,7 +97,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos Y="15"/>
-        <UsageCount Value="183"/>
+        <UsageCount Value="184"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -108,33 +106,34 @@
         <EditorIndex Value="-1"/>
         <CursorPos Y="21"/>
         <FoldState Value=" T7AC2 T3K0{yp"/>
-        <UsageCount Value="182"/>
+        <UsageCount Value="183"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPToolsUnit.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="555"/>
-        <CursorPos Y="581"/>
-        <UsageCount Value="180"/>
+        <TopLine Value="1250"/>
+        <CursorPos Y="1291"/>
+        <FoldState Value=" T7YB2811 PiQk3H T3lA040111516 pjFkX0E[94IjH2A5 piXjN0A3]ISi52N]IkDkL2R4]Rcl906[R40jK055212412 PjZm90J"/>
+        <UsageCount Value="181"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPInksUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="94"/>
         <CursorPos Y="116"/>
-        <UsageCount Value="179"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="180"/>
       </Unit>
       <Unit>
         <Filename Value="BDPConfirmQuitUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="17" Y="8"/>
-        <UsageCount Value="167"/>
+        <UsageCount Value="168"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -143,7 +142,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="160"/>
+        <UsageCount Value="161"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
@@ -151,35 +150,32 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="17" Y="8"/>
-        <UsageCount Value="143"/>
+        <UsageCount Value="144"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPColorSelectorUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="46"/>
-        <CursorPos Y="75"/>
-        <UsageCount Value="131"/>
+        <CursorPos Y="48"/>
+        <UsageCount Value="132"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPUndoUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="7"/>
         <CursorPos X="23" Y="65"/>
-        <UsageCount Value="121"/>
-        <Loaded Value="True"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="122"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="216"/>
         <CursorPos Y="231"/>
-        <UsageCount Value="94"/>
+        <UsageCount Value="95"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -188,16 +184,16 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="38"/>
         <CursorPos X="53" Y="63"/>
-        <UsageCount Value="86"/>
+        <UsageCount Value="87"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="191"/>
-        <CursorPos X="33" Y="224"/>
-        <UsageCount Value="59"/>
+        <CursorPos X="26" Y="220"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -250,9 +246,10 @@
       <Unit>
         <Filename Value="units\MKMouse2.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="250"/>
-        <CursorPos Y="219"/>
+        <TopLine Value="375"/>
+        <CursorPos Y="388"/>
         <UsageCount Value="24"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc_ButtonLogic2.pas"/>
@@ -466,126 +463,114 @@
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
     </Units>
-    <JumpHistory HistoryIndex="29">
+    <JumpHistory HistoryIndex="26">
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPControlsUnit.pas"/>
+        <Caret Line="181" TopLine="132"/>
+      </Position>
       <Position>
         <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="143" Column="10" TopLine="109"/>
+        <Caret Line="1290" TopLine="1241"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
       </Position>
       <Position>
         <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="136" Column="29" TopLine="119"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
       </Position>
       <Position>
         <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="134" Column="30" TopLine="111"/>
+        <Caret Line="183" TopLine="160"/>
       </Position>
       <Position>
         <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="143" Column="16" TopLine="48"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="1175" Column="3" TopLine="961"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="18" Column="15"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="193" Column="15" TopLine="191"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="132" Column="9" TopLine="98"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="1120" Column="15" TopLine="952"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="120" Column="14" TopLine="98"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="40" Column="7" TopLine="2"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="54" Column="7"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="81" Column="9" TopLine="45"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="92" Column="7" TopLine="60"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="105" Column="9" TopLine="88"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPToolsUnit.pas"/>
-        <Caret Line="81" TopLine="60"/>
+        <Caret Line="1304" TopLine="1241"/>
       </Position>
       <Position>
         <Filename Value="BDPMainUnit.pas"/>
-        <Caret Line="187" Column="20" TopLine="164"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1304" TopLine="1241"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="183" TopLine="160"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="163" Column="30" TopLine="151"/>
       </Position>
       <Position>
         <Filename Value="BDPControlsUnit.pas"/>
-        <Caret Line="30" Column="11"/>
+        <Caret Line="196" TopLine="132"/>
       </Position>
       <Position>
-        <Filename Value="BDPControlsUnit.pas"/>
-        <Caret Line="313" Column="10" TopLine="242"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1199" TopLine="1165"/>
       </Position>
       <Position>
-        <Filename Value="BDPControlsUnit.pas"/>
-        <Caret Line="125" Column="49" TopLine="100"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1201" TopLine="1159"/>
       </Position>
       <Position>
-        <Filename Value="BDPControlsUnit.pas"/>
-        <Caret Line="298" TopLine="236"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1308" TopLine="1244"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="16" Column="17" TopLine="7"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="171" Column="9" TopLine="103"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="128" TopLine="102"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1291" TopLine="1249"/>
       </Position>
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="26" Column="9"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="129" TopLine="110"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="17" Column="10"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="145" TopLine="107"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="115" TopLine="84"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="131" TopLine="108"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="28" Column="20" TopLine="8"/>
+        <Filename Value="BDPToolsUnit.pas"/>
+        <Caret Line="1292" TopLine="1249"/>
       </Position>
     </JumpHistory>
     <RunParams>
